SFDC DevOps Test/src/objects/Meeting_Notes__c.object
<CustomObject>
    <description>TOOLKIT: An object to capture notes from ALL meetings.</description>
    <fields>
        <fullName>Action_Items__c</fullName>
        <description>Action Items captured during the meeting. These should be transferred to action items in the toolkit.</description>
        <label>Action Items</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Attendees__c</fullName>
        <description>Names of everyone who attended the meeting.</description>
        <label>Attendees</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Meeting_Date_and_Time__c</fullName>
        <description>Date and Time of the Meeting</description>
        <label>Meeting Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Meeting_Facilitator__c</fullName>
        <description>First and Last Name of the Meeting Facilitator</description>
        <label>Meeting Facilitator</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Notes__c</fullName>
        <description>Detailed Meeting Notes</description>
        <label>Meeting Notes Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Release to which the meeting is related.</description>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Meeting Notes</relationshipLabel>
        <relationshipName>Meeting_Notes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Meeting Notes</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Meeting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meeting Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>